force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Pricing_Glossary__c</fullName>
                </value>
                <value>
                    <fullName>License_Metric__c</fullName>
                </value>
                <value>
                    <fullName>Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>Is_ILF__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DiscountTier__c</fullName>
                </value>
                <value>
                    <fullName>Slab_Entry__c</fullName>
                </value>
                <value>
                    <fullName>CustomQuantity__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__DiscountSchedule__c</fullName>
                </value>
                <value>
                    <fullName>CM_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Disable_Proration__c</fullName>
                </value>
                <value>
                    <fullName>CPQ_Revenue_Type__c</fullName>
                </value>
                <value>
                    <fullName>External_SKU_DH__c</fullName>
                    <label>External SKU (DH)</label>
                </value>
                <value>
                    <fullName>SBQQ__TermDiscountTier__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quantity__c</fullName>
                    <label>Quantity</label>
                </value>
                <value>
                    <fullName>SBQQ__EffectiveQuantity__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__PricingMethod__c</fullName>
                </value>
                <value>
                    <fullName>CurrencyIsoCode</fullName>
                </value>
                <value>
                    <fullName>Transactional__c</fullName>
                </value>
                <value>
                    <fullName>Transactional_Tier__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Discount__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__CustomerDiscount__c</fullName>
                </value>
                <value>
                    <fullName>Additional_Amt__c</fullName>
                </value>
                <value>
                    <fullName>Temp_Flag__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Mapped_Region__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__ProductCode__c</fullName>
                </value>
                <value>
                    <fullName>Bundle_Discount_Percentage__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Threshold__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Threshold_Exceeded__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>