force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__FilterVariable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable that filters this condition.</description>
        <inlineHelpText>Select the Summary Variable you want this condition to use as a filter.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Filtered Price Conditions</relationshipLabel>
        <relationshipName>FilteredPriceConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>