force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__Object__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Object__c</fullName>
        <description>Object against which the condition is evaluated.</description>
        <inlineHelpText>Object against which the condition is evaluated.</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Summary Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>