force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__Rule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Price rule running this condition.</description>
        <inlineHelpText>Price rule running this condition.</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>SBQQ__PriceRule__c</referenceTo>
        <relationshipLabel>Price Conditions</relationshipLabel>
        <relationshipName>PriceConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>