force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__TestedVariable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Summary variable tested when evaluating this price condition.</description>
        <inlineHelpText>Summary variable tested by this price condition.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Price Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedPriceConditions</relationshipName>
        <type>Lookup</type>
    </CustomField>