force-app/main/default/objects/SBQQ__PriceCondition__c/validationRules/SBQQ__Tested_field_or_variable.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Tested_field_or_variable</fullName>
        <active>true</active>
        <description>Require either tested field or variable.</description>
        <errorConditionFormula>AND(ISBLANK(TEXT(SBQQ__Field__c)),ISBLANK(SBQQ__TestedVariable__c),ISBLANK(SBQQ__TestedFormula__c))</errorConditionFormula>
        <errorMessage>You must specify either field or tested variable.</errorMessage>
    </ValidationRule>